 PARQUET-1655: [C++] Fixed signed byte comparison

The prior logic, I don't think is ever correct for signed
comparison.  Signed comparison of bytes as far as I can
tell from the specification is only used by Decimal
encoded values.  Decimals are always encoded as big-endian
two's complement integers.

The new logic reflects this by doing sign extension when
necessary for comparisons, and only using signed byte comparison
for the very first value when appropriate.

This PR also eliminates what appears to be a some dead code.